# Struktury

./: BST.cpp  BST.h  CMakeLists.txt  Calculator.cpp  Calculator.h  Graph.cpp  Graph.h  List.cpp  List.h  Node.cpp  Node.h  PriorityQueue.cpp  PriorityQueue.h  Queue.cpp  Queue.h  Stack.cpp  Stack.h  calculator.cpp
